# metron_ai_ardagen

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  LICENSE_SRC  README.md  cspell.config.yaml  metron_ai_ardagen_run.py  pyproject.toml  requirements.txt  requirements_docs.txt
.github/workflows/: build_docs.yml  set_up_ardagen_dev_cpu_env_and_run_base.yml
conf/: isaac_sim.yaml  master_synthesizer.yaml  metron_ai_ardagen_config.yaml  writer.yaml
conf/cameras/: common_single_camera.yaml
conf/scenarios/: common_scenario.yaml  demo_scenario.yaml  development_scenario.yaml  dummy_scenario.yaml  metron_trivial_scenario.yaml
docs/: .buildinfo  CNAME  api_docs.html  architecture.html  architecture.md  configuration.html  demo_scenarios.html  development_notes.html  docs_arch.html  foo.html  genindex.html  guides.html  index.html  introduction.html  objects.inv  project_installation.html  project_installation.md  py-modindex.html  release_page.html  releases.html  scenarios.html  scenarios.md  search.html  searchindex.js  synthesizer_workers.html  synthesizers.html
docs_src/: architecture.rst  conf.py  configuration.md  demo_scenarios.md  docs_arch.md  foo.md  guides.rst  index.rst  introduction.rst  project_installation.md  synthesizers.md
miscellaneous/: __init__.py  custom_exceptions.py  metron_ai_ardagen_utils.py  metron_ai_argagen_config_schema.py  offset_writer.py
synthesizers/: __init__.py  master_synthesizer.py
tools/: __init__.py  isaac_sim.py  replicator.py  scenario.py  scenarios_manager.py  single_camera.py  writer.py
(+273 files in other folders)
